Setup component with props and fix some spacing.

--- a/src/components/householdinfo/householdinfo.css
+++ b/src/components/householdinfo/householdinfo.css
@@ -2,6 +2,10 @@ ul {
     list-style-type: none;
 }
 
+li {
+    margin: 0 10px;
+}
+
 .hhinfo {
     border: solid;
     border-width: 2px;
